# vendingmachine.com

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
proptest-regressions/: storage.txt
src/: AggregatorV3Interface.sol  IErrors.sol  IVRFV2PlusWrapper.sol  IVendingMachine.sol  calldata.rs  chainlink_call.rs  chainlink_price_call.rs  chainlink_vrf_call.rs  erc20_call.rs  errors.rs  immutables.rs  lib.rs  main.rs  nft_call.rs  storage.rs
