[package]
name = "vendingmachine"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"

[lib]
name = "libvendingmachine"
edition = "2021"

[[bin]]
name = "vendingmachine"

[profile.release]
codegen-units = 1
opt-level = "z"
strip = true
lto = true
debug = false
rpath = false
debug-assertions = false
incremental = false

[profile.dev]
codegen-units = 1
panic = "unwind"
opt-level = "z"
incremental = false

[dependencies]
stylus-sdk = "=0.8.1"
tiny-keccak = "2.0.2"
alloy-primitives = { version = "=0.8.20", default-features = false }
alloy-sol-types = { version = "=0.8.20", default-features = false }
